--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
         "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css"
     },
     "dependencies": {
+        "@prisma/client": "4.0.0",
         "@remix-run/node": "^1.6.3",
         "@remix-run/react": "^1.6.3",
         "@remix-run/vercel": "^1.6.3",
         "@vercel/node": "^1.15.2",
+        "clsx": "^1.2.0",
         "node-sass": "^7.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
@@ -26,6 +28,7 @@
         "concurrently": "^7.2.2",
         "eslint": "^8.15.0",
         "postcss": "^8.4.14",
+        "prisma": "^4.0.0",
         "tailwindcss": "^3.1.4",
         "typescript": "^4.6.4"
     },
