--- a/.env.prod
+++ b/.env.prod
@@ -1,2 +1,4 @@
-DATABASE_URL="mysql://94fml53b1vf4:pscale_pw_YxMsqK0u-m_pUeaLri2rRa0PfWhA6puSWo4_NmoazAI@mz1kgtin1jnp.us-east-2.psdb.cloud/blog?sslaccept=strict"
-SHADOW_DATABASE_URL="mysql://root@127.0.0.1:3310/blog"
+DATABASE_URL='mysql://87opvh6r5gw8:pscale_pw_5gftVWoUxc9cZZU2bAvk93ikxd8HKZ71raM_TTs30qA@mz1kgtin1jnp.us-east-2.psdb.cloud/blog?sslaccept=strict'
+
+Username=7opvh6r5gw8
+Password=pscale_pw_5gftVWoUxc9cZZU2bAvk93ikxd8HKZ71raM_TTs30qA
